welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:10: error: not enough arguments for method setPos: (x$1: Int, x$2: Int)Unit.
Unspecified value parameters x$1, x$2.
  if ((getX() == getMondeLargeur() -1) && (getY() == getMondeHauteur() -1)) {setPos()}
                                                                                   ^